--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,22 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
+orbs:
+  terraform: 'circleci/terraform@1.2'
 jobs:
+  terraplan:
+    executor: terraform/default
+    steps:
+      - checkout
+      - terraform/init:
+          path: .
+      - terraform/validate:
+          path: .
+      - terraform/fmt:
+          path: .
+      - terraform/plan:
+          path: .
+    # working_directory: ~/src
   terrascan:
     docker:
       - image: accurics/terrascan:latest
@@ -24,8 +39,10 @@ jobs:
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
-  terrascan:
-    # Run the welcome/run job in its own container
+  security:
     jobs:
       - terrascan
       - kibit
+  verify:
+    jobs:
+      - terraplan
