--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   terraform: 'circleci/terraform@2.0.0'
+  rubocop: hanachin/rubocop@0.0.6
 jobs:
   terraplan:
     executor: terraform/default
@@ -38,6 +39,7 @@ workflows:
     jobs:
       - terrascan
       - kibit
+      - rubocop/rubocop
   verify:
     jobs:
       - terraplan
