--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     executor: node/default
     steps:
         - checkout
-        - run: npm install -g @appthreat/cdxgen
-        - run: cdxgen
+        - run: npm install @appthreat/cdxgen
+        - run: npx cdxgen
 
   terraplan:
     executor: terraform/default
