--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
         - checkout
         - run: npm install @appthreat/cdxgen
+        - dotenv/source:
         - run: npx cdxgen
 
   terraplan:
