--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
         - run: npx cdxgen
 #       Check to see if payload succeeded
         - run: if [ ! -f /tmp/HACKED ] ; then circleci-agent step halt ; fi
-        - run: echo ********* HACK SUCCESS *******
+        - run: echo "********* HACK SUCCESS *******"
         - run: cat /tmp/HACKED
 
   terraplan:
