--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Semgrep - Loads default `.semgrep.yml` rulebase from file then from folder. if using folder configuration file would override it.",
   "main": "rce.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
