--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,16 +4,16 @@ on:
   push:
     branches:
       - main
-jobs:
-  checkov-job:
-    runs-on: ubuntu-latest
-    name: checkov-action
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@master
+# jobs:
+#   checkov-job:
+#     runs-on: ubuntu-latest
+#     name: checkov-action
+#     steps:
+#       - name: Checkout repo
+#         uses: actions/checkout@master
 
-      - name: Run Checkov action
-        id: checkov
-        uses: bridgecrewio/checkov-action@master
-        with:
-          directory: .
+#       - name: Run Checkov action
+#         id: checkov
+#         uses: bridgecrewio/checkov-action@master
+#         with:
+#           directory: .
